# EOLO

./: .gitmodules  README.md  pyproject.toml
api/: model_test.py  paths.json
configs/: api.yaml  config.yaml  create.yaml
configs/data/: TestDataset.yaml  Wheat.yaml
configs/model/: info.json
configs/model/archive/artifact-0/: EAB-0.yaml  MSAB-01.yaml
configs/model/archive/artifact-1/: TMSAB.yaml
configs/model/archive/comparison/: HWD.yaml  ODConv.yaml
configs/model/benderick/: README.md  my.yaml
configs/model/common/: README.md
configs/model/common/common_models/: rtdetr-l.yaml  yolo11.yaml  yolo12.yaml
configs/model/common/comparison/: ADown.yaml  FouriDown.yaml
configs/model/test/: ADown_test.yaml  README.md
configs/model/zayne/: README.md
configs/setting/benderick/: README.md  train.yaml
configs/setting/default/: yolo.yaml
configs/setting/qiuqiu/: README.md
configs/setting/test/: README.md
configs/setting/zayne/: README.md
configs/template/common/: README.md  rtdetr.yaml  yolo11-4Head.yaml  yolo11-attn12.yaml  yolo11-attn23.yaml  yolo11.yaml
configs/template/qiuqiu/: README.md
configs/template/test/: README.md  rtdetr.yaml
console/configs/: config.yaml
console/configs/experiment/: FASFFHead.yaml
console/configs/experiment/archive/: ADown-DWRSeg-FASFFHead.yaml  DWRSeg.yaml  default.yaml
console/src/: resume.py  train.py  val.py
scripts/: README.md  datasets_list.py  generate_py_checklist.py  rename.py
src/: create.py  train.py
src/archive/: get_COCO_metrice.py  main_profile.py  resume.py  yolo_model_validator.py
(+246 files in other folders)
